Bug 66420 - EDITING: Writer crashes after adding words to the user-dictionary
Summary: EDITING: Writer crashes after adding words to the user-dictionary
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Linguistic (show other bugs)
Version:
(earliest affected)
4.1.0.1 rc
Hardware: Other Windows (All)
: high major
Assignee: Michael Stahl
URL:
Whiteboard: BSA target:4.2.0 target:4.1.0
Keywords: regression
Depends on:
Blocks: mab4.1
  Show dependency treegraph
 
Reported: 2013-06-30 22:28 UTC by santiago473
Modified: 2013-07-08 09:05 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot lnglo.dll.png (10.83 KB, image/png)
2013-07-04 14:41 UTC, manj_k
Details

Note You need to log in before you can comment on or make changes to this bug.
Description santiago473 2013-06-30 22:28:07 UTC
Problem description:

Relating to https://www.libreoffice.org/bugzilla/show_bug.cgi?id=42122#c15 :

The current beta of LibreOffice 4.1.0.1.0 Writer crashes on closing after adding custom-words to the user-dictionary.

Steps to reproduce:

1. Clean installation of LibreOffice Version 4.1.0.1.0 from 27.06.2013 (Build ID: 8a1cc1449c26b7b5a46f258aabf13c28a9dbebb), all old folders were deleted before

2. Open Writer

3. Type in a custom word (like "herxherx"), right-click on it and choose "add" to add it to your user-dictionary

4. Close Writer

5. Writer crashes

Current behavior:

Writer crashes, no file "standard.dic" is written to your "wordbook" user-folder

Expected behavior:

Writer should not crash, create a new file "standard.dic" and activate it by default (see bug https://www.libreoffice.org/bugzilla/show_bug.cgi?id=65993 )

Operating System: Windows XP SP3
Operating System: Windows XP
Version: 4.1.0.1 rc
Comment 1 Nico Dorn 2013-06-30 23:04:25 UTC
Not reproducible with the current RC (Version 4.1.0.1, Build ID: 1b3956717a60d6ac35b133d7b0a0f5eb55e9155) on Kubuntu 12.10 (Linux 3.5.0-34). In my case, a correct standard.dic with "herxherx" is created. No crash on close. Windows specific bug?
Comment 2 Ken Biondi 2013-07-03 02:01:07 UTC
I was not able to reproduce this bug using Version: 4.1.0.1
Build ID: 1b3956717a60d6ac35b133d7b0a0f5eb55e9155 on Windows 8 x86_64.
Comment 3 Pedro 2013-07-03 23:17:24 UTC
Bug confirmed under Windows XP SP3 x86 en_US.
There is a crash when LO is closed. There is no standard.dic file in the wordbook folder. In fact when I created an empty standard.dic file it was erased on the next try (and LO still crashed)
This is a regression from the 4.0.x branch (it also works as expected in the 3.6.x branch)
Comment 4 manj_k 2013-07-04 14:39:44 UTC
Bug confirmed with Version: 4.1.0.1
Build ID: 1b3956717a60d6ac35b133d7b0a0f5eb55e9155
on WinXP 32b.

In addition:
- Copy/paste a (functioning) user-defined dictionary in ...\4\user\wordbook
- Start Writer (AutoSpellcheck enabled)
- Type an "unknown" word 
- Right-click → Add to Dictionary → Select the pasted dictionary
- Close Writer

- LO crash (see also attached screenshot "lnglo.dll.png):
Microsoft Application Error Reporting (dwwin.exe)
LibreOffice
Problemsignatur
AppName: soffice.bin
AppVer: 4.1.0.1
ModName: lnglo.dll
ModVer: 4.1.0.1
Offset: 000118cc

- The pasted dictionary has been erased from ...\4\user\wordbook 
→ Data loss.
Comment 5 manj_k 2013-07-04 14:41:27 UTC
Created attachment 82027 [details]
Screenshot lnglo.dll.png
Comment 6 Commit Notification 2013-07-04 22:25:24 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d68de5195605bd9236851e0714dd9b03b0f5f3be

fdo#66420: fix user dictionaries on Windows



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Michael Stahl 2013-07-04 22:28:47 UTC
happens only on Windows because an attempt to rename a file
that is still open fails; introduced by the fix for bug 42122.

fixed on master
Comment 8 Commit Notification 2013-07-05 05:17:15 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4d1774b3631e4ac93b544c42bd33cb4058a16392&h=libreoffice-4-1

fdo#66420: fix user dictionaries on Windows


It will be available in LibreOffice 4.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 manj_k 2013-07-05 15:32:32 UTC
(In reply to comment #6)

Verified. 
The fix works fine for me with master version 4.2.0.0.alpha0+
Build ID: 8624906bc437b242ea0df17801bc77d0f273f32c
TinderBox: Win-x86@6, Branch:master, Time: 2013-07-05_04:07:10.
Comment 10 santiago473 2013-07-05 16:25:27 UTC
(In reply to comment #6)

> Michael Stahl committed a patch related to this issue.
> It has been pushed to "master":
> 
> http://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=d68de5195605bd9236851e0714dd9b03b0f5f3be
> 
> fdo#66420: fix user dictionaries on Windows
> 
> 
> 
> The patch should be included in the daily builds available at
> http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
> information about daily builds can be found at:
> http://wiki.documentfoundation.org/Testing_Daily_Builds
> Affected users are encouraged to test the fix and report feedback.

OS: Windows XP SP3

Fix is working with LibreOffice 4.2.0.0.alpha0+ (Build ID: 8624906bc437b242ea0df17801bc77d0f273f32c) from http://dev-builds.libreoffice.org/daily/master/Win-x86@6/2013-07-05_04.07.10/ and LibreOffice 4.1.1.0.0+ (Build ID: 4d1774b3631e4ac93b544c42bd33cb4058a1639) from http://dev-builds.libreoffice.org/daily/libreoffice-4-1/Win-x86@6/2013-07-05_05.10.45/.

Not working with the current complete installation package from http://dev-builds.libreoffice.org/daily/libreoffice-4-1/Win-x86_9-Voreppe/2013-07-04_10.38.48/ (Build ID: 69876d6bdca0a527c4d10b9a3c724f5df9d035e). (Patch not applied yet?)
Comment 11 manj_k 2013-07-06 12:43:46 UTC
(In reply to comment #8, and comment #9)

Verified. 
The fix works fine for me with version 4.1.1.0.0+
Build ID: 03c0f9976dc1c77973658aa02db2823bfc9a09a
TinderBox: Win-x86_9-Voreppe, Branch:libreoffice-4-1, Time: 2013-07-05_09:14:47.
Comment 12 santiago473 2013-07-06 13:13:50 UTC
Fix now also working with current LibreOffice 4.1.1.0.0+ complete installation from http://dev-builds.libreoffice.org/daily/libreoffice-4-1/Win-x86_9-Voreppe/2013-07-05_09.14.47 (Build ID: 03c0f9976dc1c77973658aa02db2823bfc9a09a). Looking forward to LO 4.1 release!
Comment 13 Commit Notification 2013-07-08 09:05:26 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-1-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=633736f40f7e6a58d691875b2e52d9a5e8140113&h=libreoffice-4-1-0

fdo#66420: fix user dictionaries on Windows


It will be available already in LibreOffice 4.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.