fdo#66420: fix user dictionaries on Windows

28300209604ee1bb8e5050322b29e95a07f679d8 added yet another silly temp
file wrapper class, and introduced 2 bugs: the file descriptor is not
closed before renaming it which fails with ERROR_SHARING_VIOLATION
on Win32, and (as a consequence of that) another attempt to save the
dictionary during shutdown fails because SimpleFileAccess cannot be
created and this is not checked.

Change-Id: I7bd3f5d349ed550440a93fe71e3791c9919de3af